--- a/look2.css
+++ b/look2.css
@@ -543,7 +543,7 @@ textarea
  }
  .skill
  {
-   height:220vh;
+   height:230vh;
  }
  .heading
  {
@@ -552,6 +552,8 @@ textarea
  .box
  {
    margin-top:50px;
+   height:150px;
+   width:150px;
  }
  .project
  {
@@ -593,7 +595,7 @@ textarea
  .social2
 {
   display: flex;
-  margin-left: 5%;
+  margin-left: 1%;
   margin-top:-12%;
 }
 
